[package]
name = "cairo-rs"
license = "MIT"
homepage = "http://gtk-rs.org/"
authors = ["The Gtk-rs Project Developers"]
keywords = ["cairo", "gtk-rs", "gnome", "GUI"]
readme = "README.md"
documentation = "http://gtk-rs.org/docs/cairo/"
version = "0.4.1"
description = "Rust bindings for the Cairo library"
repository = "https://github.com/gtk-rs/cairo"
build = "build.rs"

[lib]
name = "cairo"

[features]
purge-lgpl-docs = ["gtk-rs-lgpl-docs"]
png = ["cairo-sys-rs/png"]
use_glib = ["glib", "glib-sys"]
embed-lgpl-docs = ["gtk-rs-lgpl-docs"]
v1_12 = ["cairo-sys-rs/v1_12"]
default = ["use_glib"]
xcb = ["cairo-sys-rs/xcb"]
dox = ["cairo-sys-rs/dox", "glib/dox"]

[build-dependencies.gtk-rs-lgpl-docs]
version = "^0.1.3"
optional = true

[dependencies.glib]
version = "0.5.0"
optional = true

[dependencies.glib-sys]
version = "0.6.0"
optional = true

[dependencies]
cairo-sys-rs = "0.6.0"
c_vec = "1.2"
libc = "0.2"
